# fractal-grammar

./: .gitignore  HDC_INTEGRATION_SPEC.md  README.md  hdc_stress_results.json  hdc_stress_test.py
fg-sync/: KNOWN_LIMITATIONS.md  README.md  fg-sync.toml.example  install.sh  pyproject.toml
fg-sync/contrib/: fg-sync.plist  fg-sync.service
fg-sync/fg_sync/: __init__.py  cli.py  config.py  daemon.py  injector.py  metrics.py  pipeline.py  proxy.py
fg-sync/fg_sync/sources/: __init__.py  openwebui.py
fg-sync/tests/: __init__.py  test_config.py  test_injector.py  test_metrics.py  test_pipeline.py
fg_gate_rs/: Cargo.toml  README.md  build.sh  latency_results.json  pyproject.toml
fg_gate_rs/python/fg_gate/: __init__.py
fg_gate_rs/src/: decode.rs  encode.rs  format.rs  gate.rs  lib.rs  py_module.rs  tests.rs
fg_gate_rs/tests/: test_integration.py
fractal_grammar/: README.md  __init__.py  pipeline.py
fractal_grammar/clustering/: hierarchical.py  self_similarity.py
fractal_grammar/core/: dedup.py  sequence.py
fractal_grammar/embeddings/: encoder.py  hdc_encoder.py
fractal_grammar/examples/: basic_usage.py
fractal_grammar/grammar/: extractor.py
fractal_grammar/tests/: test_hdc.py  test_hypothesis_stress.py  test_pipeline.py
whitepaper/: fractal_behavioral_grammar_whitepaper.md
